# libgmsn

./: .gitignore  configure.ac
lib/: Makefile.am  buffer.c  buffer.h  cmd.c  cmd.h  conn.c  conn.h  conn_end.c  conn_end.h  core.c  core.h  cs.c  cs.h  debug.c  debug.h  ns.c  ns.h  ps.c  ps.h  sem.c  sem.h  ssl.c  ssl.h  ssl_end.c  ssl_end.h  util.c  util.h
tests/: Makefile.am  main.c
